<resources>
    <string name="app_name">Doctor Chef</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="american">American</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="hot_dogs">Hot Dogs</string>
    <string name="burgers">Burgers</string>
    <string name="croissant">Croissant</string>
    <string name="soup">Soup</string>
    <string name="pasta">Pasta</string>
    <string name="pizza">Pizza</string>
    <string name="title_of_recipe">Title of Recipe:</string>
    <string name="write_recipe_details">Write Recipe Details:</string>
    <string name="submit">Submit</string>
    <string name="select_food_type">Select Food Type</string>
    <string name="select_image">Select Image</string>

    <string name="hometext">
        Welcome to Doctor Chef!\n\n\n\n\n
    </string>

    <string name="hometext2">
        Browse Several Different Recipes From Different Countries
    </string>
    <string name="recipelineseparator">---------------------------------------------------------</string>
    <string name="imagegenericcontentdesc">Image</string>
    <string name="logo">Logo</string>
    <string name="backgroundaboutus">backgroundaboutus</string>
    <string name="more_about_us">More About Us</string>
    <string name="about_us_menu">About Us</string>
    <string name="DescriptionAboutUs">Doctor Chef is a platform application which comprises of several different recipes with different origin! Our aim is to make recipes more convenient for you.</string>

</resources>
