<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/more_about_us"
        android:gravity="top"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="30sp"
        android:includeFontPadding="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/DescriptionAboutUs"
        android:gravity="center"
        android:textSize="17sp"
        android:includeFontPadding="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorA"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/homebackground"
        android:alpha="0.17"
        android:contentDescription="@string/backgroundaboutus"/>

</RelativeLayout>